# foundational-training

./: .gitignore  README.md  requirements.txt
day10_multimodal_RAG/: langgraph_imp.py  multimodal.ipynb
day1_custom_chatbot/: .env  chatbot.py
day2_file_chatbot/: answers.txt  chatbot.py  file_handler.py  mcp_test.py  questions.txt  test_huggingface.py  web_scraper.py
day3_semantic_similarity/: embedding_service.py  sem_hf.py  sem_w2v.py
day4_vector_embeddings/: .gitignore  chromadb_imp.py  chromadb_sqlite.py
day4_vector_embeddings/multimodel_chatbot/: gem.py  groq.py  hf.py  main.py
day5_langchain/: weather_chatbot.py
day6_7_rag/: .gitignore  indexed_files.json  lc_rag.py
day6_rag/: .gitignore  chromadb_sqlite.py  lc_rag.py  rag_imp.py
day8_agents/: agent_test.py  t2.py
day9_agents_langchain/: research_bot.py  test.py
day_10_multimodal_RAG_langGraph/: multimodal.ipynb
day_11_MCP/: mcp_test.py
day_12_research_agent/: app.py  imp_context.py  res.py
deep_agents/: 1-basicsdeepagent.ipynb  pyproject.toml  requirements.txt
healthcare_summarizer/: clinical_summary.py  md_to_docx.py  phi_masker.py  single_call_clinical_summary.py  temp.py
speech_to_text/: main.py
